--- a/Pr01/src/main/webapp/WEB-INF/web.xml
+++ b/Pr01/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 모든 요청에 대해 스프링 시큐리티가 보안을 해줌 (약 10가지 보안 필터 작동)  -->
-<!-- 	<filter>
+ 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -43,7 +43,7 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	 -->
+	
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
